fixed alignment of button in messaging field on projects per UX request

--- a/client/src/SASS/ProjectComments.scss
+++ b/client/src/SASS/ProjectComments.scss
@@ -139,7 +139,7 @@
       border-radius: 100%;
       cursor: pointer;
       height: 40px;
-      margin-bottom: 2%;
+      margin: 1%;
       outline: none;
       width: 40px;
       z-index: 9;
